# pyspark-demo

./: README.md  main.py  pyproject.toml
dependencies/: spark.py
src/: etl.py
