[tool.poetry]
name = "pyspark-demo"
version = "0.1.0"
description = ""
authors = ["Erik Tastepe <erik.tastepe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
